1999-06-11  XEmacs Build Bot <builds@cvs.xemacs.org>

	* XEmacs 21.2.16 is released

1999-06-07  Hrvoje Niksic  <hniksic@srce.hr>

	* automated/base64-tests.el: Check for error instead for nil where 
	error conditions are expected.

	* automated/base64-tests.el: Comment out (for now) the code that
	causes crashes.

1999-06-05  Hrvoje Niksic  <hniksic@srce.hr>

	* automated/base64-tests.el: Check that the decoder handles
	arbitrary characters.  Cut down on the number of tests.

1999-06-04  XEmacs Build Bot <builds@cvs.xemacs.org>

	* XEmacs 21.2.15 is released

1999-06-02  Oscar Figueiredo  <oscar@xemacs.org>

	* automated/lisp-tests.el: Test `split-string'

1999-05-27  Hrvoje Niksic  <hniksic@srce.hr>

	* automated/base64-tests.el: New file.

1999-05-14  XEmacs Build Bot <builds@cvs.xemacs.org>

	* XEmacs 21.2.14 is released

1999-05-06  Hrvoje Niksic  <hniksic@srce.hr>

	* automated/symbol-tests.el: Add many more tests.

1999-05-06  Hrvoje Niksic  <hniksic@srce.hr>

	* automated/lisp-tests.el: Ditto.

	* automated/hash-table-tests.el: Ditto.

	* automated/database-tests.el: Don't use backquote where quote
	would suffice.

	* automated/symbol-tests.el: Add tests for magic symbols.

1999-05-04  Hrvoje Niksic  <hniksic@srce.hr>

	* automated/hash-table-tests.el: Fix comment.

1999-04-22  Hrvoje Niksic  <hniksic@srce.hr>

	* automated/test-harness.el (batch-test-emacs): Minor fixes.

1999-03-12  XEmacs Build Bot <builds@cvs.xemacs.org>

	* XEmacs 21.2.13 is released

1999-03-05  XEmacs Build Bot <builds@cvs.xemacs.org>

	* XEmacs 21.2.12 is released

1999-03-01  XEmacs Build Bot <builds@cvs.xemacs.org>

	* XEmacs 21.2.11 is released

1999-02-05  XEmacs Build Bot <builds@cvs.xemacs.org>

	* XEmacs 21.2.10 is released

1999-02-02  XEmacs Build Bot <builds@cvs.xemacs.org>

	* XEmacs 21.2.9 is released

1999-01-30  Martin Buchholz  <martin@xemacs.org>

	* automated/lisp-tests.el: Add test for buffer-local function
	parameter crash
